Fix Firefox Scrollbar

--- a/style.css
+++ b/style.css
@@ -85,9 +85,17 @@ body{
     padding: 2px;
     background-color: transparent;
 }
+.middletext {
+    right: 0;
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    position: fixed;
+}
 .bottomtext {
     font-family: "04b";
-    margin-top: 120px;
+    margin-top: 60px;
     padding: 8px;
     background-color: #0C0C0D;
     color: #8C8C8C;
@@ -101,6 +109,7 @@ body{
     width: 100%;
     height: 100%;
     padding-top: 120px;
+    margin-bottom: 20px;
 }
 .entry{
     max-width: 800px;
@@ -118,11 +127,11 @@ body{
     position: relative;
     max-height: 410px;
     overflow-y: auto;
+    overflow-X: hidden;
     transition: 0.5s;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 5%;
-    padding-right: 5%; 
 }
 .operator.list::-webkit-scrollbar{
     display: none;
